# voices

./: .dockerignore  Cargo.toml  README.md  build.Dockerfile  build.rs  docker-build.sh  docker-compose.yml
.github/workflows/: rust.yml
channels-internal/: .env  Cargo.toml  Dockerfile  build.rs  channels.v1.proto  init_db.sh  service.proto
channels-internal/migrations/2022-08-30-214404_init/: up.sql
channels-internal/src/: db.rs  error.rs  lib.rs  main.rs  schema.rs  server.rs  test.rs  test_helper.rs
channels-internal/src/grpc/: client.rs  mod.rs  service.rs  voice_channels.v1.rs
channels-internal/src/models/: channel.rs  mod.rs  server.rs  voice_server.rs
channels/core/: Cargo.toml  init.sql  init_db.sh
channels/core/src/: models.rs  test.rs  test_helper.rs
channels/core/src/db_models/: mod.rs  server.rs
channels/grpc/: Cargo.toml  Dockerfile  build.rs  channels.v1.proto
channels/grpc/src/: lib.rs  main.rs  voice_channels.v1.rs
channels/models/: Cargo.toml
channels/models/src/: lib.rs
client/: Cargo.toml
client/src/: channels_api.rs  config.rs  lib.rs  main.rs  mic.rs  play.rs  udp.rs  voice.rs  ws.rs
docker/: build-standalone.sh  build.Dockerfile  build.sh  docker-compose-standalone.yml  docker-compose.yml  runtime.Dockerfile  standalone.Dockerfile
docker/dev-ingress/: nginx.conf
docs/: doc.md
docs/diagrams/: component-diagram-distributed.puml  component-diagram-standalone.puml  container-diagram.puml  join-sequence.puml  system-diagram.puml
gateway/: Cargo.toml  Dockerfile  build.rs  cli.py
gateway/src/: lib.rs  main.rs  rest_api.rs
gateway/src/channel_registry/: distributed.rs  integrated.rs  mod.rs  voice_channels.v1.rs
gateway/src/server/: channel_registry.rs  channel_state.rs  channels.rs  mod.rs  session.rs  ws.rs
gateway/src/server/channels/: mod.rs
gateway/src/server/channels/state/: distributed.rs  local.rs  mod.rs
gateway/src/server/voice_instance/: mod.rs  remote.rs  voice_server.v1.rs
gateway/src/voice_instance/: integrated.rs  mod.rs  remote.rs  voice_server.v1.rs
grafana-compose/: docker-compose.yaml
grafana-compose/loki/: promtail-config.yaml
grafana-compose/shared/: grafana-datasources.yaml  tempo.yaml
server/: Cargo.toml
server/channels/core/migrations/2022-08-30-214404_init/: down.sql
server/channels/core/src/: error.rs  lib.rs  schema.rs
server/channels/core/src/db_models/: channel.rs  voice_server.rs
server/channels/grpc/: Cargo.toml  Dockerfile
server/channels/grpc/src/: server.rs  service.rs  voice_channels.v1.rs
server/gateway/: Cargo.toml  Dockerfile
server/gateway/src/: lib.rs
server/gateway/src/channel_registry/: distributed.rs  integrated.rs  mod.rs  voice_channels.v1.rs
server/gateway/src/server/: mod.rs  session.rs  ws.rs
server/gateway/src/server/channels/state/: distributed.rs  local.rs
server/gateway/src/voice_instance/: integrated.rs  mod.rs  voice_server.v1.rs
server/src/: main.rs  ports.rs  util.rs  voice.rs
server/src/server/: channel.rs  mod.rs  session.rs  voice.rs  ws.rs
server/udp-proto/: Cargo.toml
server/voice/core/: Cargo.toml
server/voice/core/src/: config.rs  lib.rs  test.rs
server/voice/crypto/: Cargo.toml
server/voice/crypto/src/: lib.rs
server/voice/grpc/: Dockerfile  build.rs
server/voice/grpc/src/: server.rs  service.rs
server/voice/grpc/src/registry/: mod.rs
server/voice/proto/: Cargo.toml  voice.proto
server/ws-proto/src/: client.rs
src/: main.rs
src/server/: voice.rs
tracing/: Cargo.toml
tracing/src/: lib.rs
udp-proto/: Cargo.toml
udp-proto/src/: lib.rs
voice-proto/: Cargo.toml  build.rs
voice-proto/src/: lib.rs
voice-server/: Cargo.toml  Dockerfile  build.rs  service.proto
voice-server/src/: channel.rs  config.rs  connection.rs  lib.rs  main.rs  ports.rs  registry.rs  server.rs  test.rs  util.rs
voice-server/src/channel/: connection.rs  mod.rs
voice-server/src/grpc/: client.rs  mod.rs  voice_server.v1.rs
voice-server/src/registry/: mod.rs
voice/core/: Cargo.toml
voice/core/src/: test.rs
voice/core/src/channel/: connection.rs  mod.rs
voice/crypto/: Cargo.toml
voice/grpc/: Cargo.toml
voice/grpc/src/: main.rs  service.rs  voice_server.v1.rs
voice/grpc/src/registry/: voice_channels.v1.rs
voice/models/: Cargo.toml
voice/models/src/: lib.rs
voice/proto/: build.rs
voice_proto/: voice.proto
voices-crypto/: Cargo.toml
ws-proto/: Cargo.toml
ws-proto/src/: client.rs  lib.rs
ws_proto/: Cargo.toml
ws_proto/src/: lib.rs
