[package]
name = "voices-channels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
async-trait = "0.1.61"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.19", features = ["derive", "env"] }
deadpool = "0.9.5"
deadpool-diesel = { version = "0.4.1", features = ["postgres", "sqlite"] }
diesel = { version = "2.0.0", features = [
  "postgres",
  "sqlite",
  "uuid",
  "chrono",
], default-features = false }
dotenvy = { version = "0.15.3", optional = true }
prost = "0.11.0"
prost-types = "0.11.0"
rand_core = { version = "0.6", features = ["std"] }
secrecy = { version = "0.8.0" }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.33"
tokio = { version = "1.20.1", features = ["full"] }
tonic = { version = "0.8.0", features = ["transport"] }
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.3.4", features = ["trace", "tracing"] }
tracing = "0.1.36"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
url = "2.3.0"
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[dev-dependencies]
diesel_migrations = "2.0.0"
dotenvy = { version = "0.15.3" }
url = "2.3.0"

[build-dependencies]
anyhow = "1.0.58"
tonic-build = "0.8"
