[package]
name = "voices-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
audiopus = "0.3.0-rc.0"
base64 = "0.20.0"
byteorder = "1"
bytes = "1.3.0"
clap = { version = "3.2.17", features = ["derive"] }
cpal = "0.14.2"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
futures-util = "0.3.21"
hound = "3.4.0"
prost = "0.11.0"
prost-types = "0.11.0"
rand = "0.8.5"
rodio = { version = "0.16.0", features = ["wav"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = [
  "rustls",
  "tokio-rustls",
  "rustls-tls-webpki-roots",
] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tungstenite = { version = "0.17.3", features = ["rustls"] }
udp-proto = { version = "0.1.0", path = "../udp-proto" }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
voices-crypto = { path = "../voices-crypto" }
voice-proto = { path = "../voice-proto", features = ["client"] }
voices-ws-proto = { path = "../ws-proto" }
rubato = { version = "0.12.0", features = ["log"] }
tracing-log = "0.1.3"
