[package]
name = "voices-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
audiopus = "0.3.0-rc.0"
base64 = "0.21.2"
byteorder = "1"
bytes = "1.3.0"
clap = { version = "3.2.17", features = ["derive"] }
cpal = "0.15.2"
futures-util = "0.3.21"
hound = "3.4.0"
prost = "0.11.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["rustls-tls", "blocking"], no-default-features = true }
rodio = { version = "0.17.1", features = ["wav"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = [
  "rustls",
  "tokio-rustls",
  "rustls-tls-webpki-roots",
] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tungstenite = { version = "0.19.0", features = ["rustls"] }
udp-proto = { version = "0.1.0", path = "../udp-proto" }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
voices-voice-crypto = { path = "../voice/crypto" }
voice-proto = { path = "../voice/proto", features = ["client"] }
voices-ws-proto = { path = "../ws-proto", features = ["client"] }
rubato = { version = "0.12.0", features = ["log"] }
tracing-log = "0.1.3"
nnnoiseless = "0.5.1"
