[package]
name = "voices-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
audiopus = "0.3.0-rc.0"
base64 = "0.21.4"
byteorder = "1"
bytes = "1.5.0"
clap = { version = "4.4.6", features = ["derive"] }
cpal = "0.15.2"
futures-util = "0.3.28"
hound = "3.5.1"
prost = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["rustls-tls", "blocking"], default-features = false }
rodio = { version = "0.17.1", features = ["wav"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = [
  "rustls",
  "tokio-rustls",
  "rustls-tls-webpki-roots",
] }
tracing = { version = "0.1.39", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tungstenite = { version = "0.20.1", features = ["rustls"] }
udp-proto = { version = "0.1.0", path = "../server/udp-proto" }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
voices-voice-crypto = { path = "../server/voice/crypto" }
voice-proto = { path = "../server/voice/proto", features = ["client"] }
voices-ws-proto = { path = "../server/ws-proto", features = ["client"] }
rubato = { version = "0.14.1", features = ["log"] }
tracing-log = "0.1.3"
nnnoiseless = "0.5.1"
