[package]
name = "voices-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.61"
base64 = "0.20.0"
byteorder = "1"
bytes = "1.2.1"
clap = { version = "3.2.17", features = ["derive"] }
deadpool-redis = { version = "0.11.1", optional = true }
futures-util = "0.3.21"
prost = "0.11.0"
prost-types = "0.11.0"
rand = "0.8.5"
redis = { version = "0.22.1", features = [
  "tokio-comp",
  "connection-manager",
], optional = true }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
strum = "0.24.1"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tokio-util = { version = "0.7.3", features = ["io-util", "net"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tungstenite = { version = "0.18.0", features = ["rustls"] }
udp-proto = { version = "0.1.0", path = "../udp-proto" }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
voice-server = { path = "../voice-server" }
voices-ws-proto = { path = "../ws-proto", features = ["server"] }
voices-channels = { path = "../channels-internal" }
tonic = { version = "0.8.3", features = ["tokio-rustls", "tls"] }
axum = { version = "0.6.1", features = ["ws"] }
tower-http = { version = "0.3.5", features = ["cors"] }

[features]
default = ["standalone", "distributed"]
distributed = ["deadpool-redis", "redis"]
standalone = []

[dev-dependencies]
dotenvy = "0.15.6"

[build-dependencies]
anyhow = "1.0.58"
tonic-build = "0.8"
