[package]
name = "voices-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.61"
base64 = "0.21.2"
byteorder = "1"
bytes = "1.2.1"
clap = { version = "3.2.17", features = ["derive", "env"] }
deadpool-redis = { version = "0.12.0", optional = true }
futures-util = "0.3.21"
rand = "0.8.5"
redis = { version = "0.23.0", features = [
  "tokio-comp",
  "connection-manager",
], optional = true }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
server-framework = { git = "https://github.com/EmbarkStudios/server-framework", ref = "1bae7fe7a417443b365d2452007adfe46910037b" }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tokio-util = { version = "0.7.3", features = ["io-util", "net"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
voices-voice-models = { path = "../voice/models" }
voices-voice = { path = "../voice/core", optional = true }
voices-ws-proto = { path = "../ws-proto" }
voices-channels = { path = "../channels/core", optional = true }
voices-channels-models = { path = "../channels/models"}
voices-tracing = { path = "../tracing" }
tonic = { version = "0.9.2", features = ["tls"], optional = true }
axum = { version = "0.6.1", features = ["ws"] }
tower-http = { version = "0.4.0", features = ["cors"] }
chrono = { version = "0.4.26", features = ["serde"] }

prost = { version = "0.11.0", optional = true }
prost-types = { version = "0.11.0", optional = true}
opentelemetry = "0.19.0"
tracing-opentelemetry = "0.19.0"

[features]
default = ["standalone", "distributed"]
distributed = ["deadpool-redis", "redis", "tonic", "prost", "prost-types", "anyhow", "tonic-build"]
standalone = ["voices-channels", "voices-voice"]

[dev-dependencies]
assert_matches = "1.5.0"
dotenvy = "0.15.6"
mockall = "0.11.4"
tokio = { version = "1.20.1", features = ["test-util"] }

[build-dependencies]
anyhow = {version = "1.0.58", optional = true }
tonic-build = { version = "0.9.2", optional = true }
