[package]
name = "voice-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.0"
prost-types = "0.11.0"

[build-dependencies]
anyhow = "1.0.58"
prost-build = "0.11.0"

[features]
default = []
server = []
client = []
