[package]
name = "voice-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
byteorder = "1"
bytes = "1.2.1"
clap = { version = "3.2.17", features = ["derive"] }
futures-util = "0.3.21"
prost = "0.11.0"
prost-types = "0.11.0"
rand = "0.8.5"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
strum = "0.24.1"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tokio-tungstenite = { version = "0.17.2", features = ["tokio-rustls"] }
tokio-util = { version = "0.7.3", features = ["io-util", "net"] }
tonic = "0.8.0"
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tungstenite = { version = "0.17.3", features = ["rustls"] }
udp-proto = { version = "0.1.0", path = "../udp-proto" }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
ws_proto = { path = "../ws_proto" }
voice-proto = { path = "../voice-proto", features = ["server"] }

