[package]
name = "voice-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.64"
byteorder = "1"
bytes = "1.2.1"
clap = { version = "3.2.17", features = ["derive"] }
futures-util = "0.3.21"
prost = "0.11.0"
prost-types = "0.11.0"
rand = "0.8.5"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
strum = "0.24.1"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["sync", "net"] }
tokio-util = { version = "0.7.3", features = ["io-util", "net"] }
tonic = { version = "0.8.0", features = ["transport"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
udp-proto = { version = "0.1.0", path = "../udp-proto" }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
voices-channels = { path = "../channels-internal" }
voices-crypto = { path = "../voices-crypto" }
voice-proto = { path = "../voice-proto", features = ["server"] }
xsalsa20poly1305 = { version = "0.9.0", features = ["std"] }
tracing-log = "0.1.3"
base64 = "0.21.0"

[dev-dependencies]
assert_matches = "1.5.0"
mockall = "0.11.3"
tokio = { version = "*", features = ["test-util"] }
voice-proto = { path = "../voice-proto", features = ["server", "client"] }

[build-dependencies]
anyhow = "1.0.58"
tonic-build = "0.8"
