[package]
name = "voices-ws-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secstr = { version = "0.5.1", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.83"
strum = { version = "0.24.1", features = ["derive"] }
uuid = { version = "1.1.2", features = ["serde"] }

# client side deps
futures-util = { version = "0.3.26", optional = true }
thiserror = { version = "1.0.38", optional = true }
tokio = { version = "1.16.1", features = ["net", "sync"], optional = true }
tokio-tungstenite = { version = "0.19.0", optional = true }
tracing = { version = "0.1.37", optional = true }
tungstenite = { version = "0.19.0", features = ["rustls"], optional = true }

[features]
default = []
client = ["futures-util", "thiserror", "tokio", "tokio-tungstenite", "tracing", "tungstenite"]
