[package]
name = "ws_proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secstr = { version = "0.5.1", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.83"
strum = { version = "0.24.1", features = ["derive"] }
tungstenite = "0.17.3"
uuid = { version = "1.1.2", features = ["serde"] }
