[package]
name = "voices-channels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
async-trait = "0.1.61"
clap = { version = "3.2.19", features = ["derive", "env"] }
chrono = { version = "0.4.22", features = ["serde"] }
deadpool = "0.9.5"
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
diesel = { version = "2.1.0", features = [
  "postgres",
  "uuid",
  "chrono",
], default-features = false }
diesel_migrations = "2.0.0"
dotenvy = { version = "0.15.3", optional = true }
secrecy = { version = "0.8.0" }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.33"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
url = "2.3.0"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
voices-channels-models = { path = "../models" }

[dev-dependencies]
assert_matches = "1.5.0"
dotenvy = { version = "0.15.3" }
url = "2.3.0"


[features]
default = []
test = []
