[package]
name = "voices-channels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
clap = { version = "4.4.6", features = ["derive", "env"] }
chrono = { version = "0.4.31", features = ["serde"] }
deadpool = "0.10.0"
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
diesel = { version = "2.1.3", features = [
  "postgres",
  "uuid",
  "chrono",
], default-features = false }
diesel_migrations = "2.1.0"
dotenvy = { version = "0.15.7", optional = true }
secrecy = { version = "0.8.0" }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.39"
url = "2.4.1"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
voices-channels-models = { path = "../models" }

[dev-dependencies]
assert_matches = "1.5.0"
dotenvy = { version = "0.15.7" }
url = "2.4.1"


[features]
default = []
test = []
