[package]
name = "voices-channels-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
chrono = { version = "0.4.22" }
clap = { version = "3.2.19", features = ["derive", "env"] }
prost = "0.11.0"
prost-types = "0.11.0"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tonic = { version = "0.9.2", features = ["transport"] }
tower-http = { version = "0.4.0", features = ["trace", "tracing"] }
tracing = "0.1.36"
tracing-log = "0.1.3"
tower = { version = "0.4.13", features = ["tracing"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
voices-channels = { path = "../core" }
voices-channels-models = { path = "../models" }

[build-dependencies]
anyhow = "1.0.58"
tonic-build = "0.9.2"