[package]
name = "voices-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
base64 = "0.21.4"
byteorder = "1"
bytes = "1.5.0"
clap = { version = "4.4.6", features = ["derive", "env"] }
deadpool-redis = { version = "0.13.0", optional = true }
futures-util = "0.3.28"
rand = "0.8.5"
redis = { version = "0.23.3", features = [
  "tokio-comp",
  "connection-manager",
], optional = true }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-util = { version = "0.7.9", features = ["io-util", "net"] }
tracing = { version = "0.1.39", features = ["log"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
voices-voice-models = { path = "../voice/models" }
voices-voice = { path = "../voice/core", optional = true }
voices-ws-proto = { path = "../ws-proto" }
voices-channels = { path = "../channels/core", optional = true }
voices-channels-models = { path = "../channels/models"}
tonic = { version = "0.10.2", features = ["tls"], optional = true }
axum = { version = "0.6.20", features = ["ws"] }
tower-http = { version = "0.4.4", features = ["cors"] }
chrono = { version = "0.4.31", features = ["serde"] }

prost = { version = "0.12.1", optional = true }
prost-types = { version = "0.12.1", optional = true}

[features]
default = ["standalone", "distributed"]
distributed = ["deadpool-redis", "redis", "tonic", "prost", "prost-types", "anyhow", "tonic-build"]
standalone = ["voices-channels", "voices-voice"]

[dev-dependencies]
assert_matches = "1.5.0"
dotenvy = "0.15.7"
mockall = "0.11.4"
tokio = { version = "1.33.0", features = ["test-util"] }

[build-dependencies]
anyhow = {version = "1.0.75", optional = true }
tonic-build = { version = "0.10.2", optional = true }
