[package]
name = "voices-voice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.17", features = ["derive", "env"] }
futures-util = "0.3.21"
rand = "0.8.5"
serde = { version = "1.0.140", features = ["derive"] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["net", "sync", "macros"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tokio-util = { version = "0.7.3", features = ["io-util", "net"] }
tracing = { version = "0.1.36", features = ["log"] }
udp-proto = { version = "0.1.0", path = "../../udp-proto" }
uuid = { version = "1.1.2", features = ["v4"] }
voices-voice-crypto = { path = "../crypto" }
voices-voice-models = { path = "../models" }
voice-proto = { path = "../proto", features = ["server"] }
xsalsa20poly1305 = { version = "0.9.0", features = ["std"] }

[dev-dependencies]
assert_matches = "1.5.0"
mockall = "0.11.3"
tokio = { version = "*", features = ["test-util"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
voice-proto = { path = "../proto", features = ["server", "client"] }

[features]
default = []
# test-internals = ["mockall", "voice-proto/server", "voice-proto/client"]
