[package]
name = "voices-voice-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
clap = { version = "4.4.6", features = ["derive", "env"] }
prost = "0.12.1"
prost-types = "0.12.1"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tonic = { version = "0.10.2", features = ["transport"] }
tracing = { version = "0.1.39", features = ["log"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4"] }
voices-voice = { path = "../core" }

[dev-dependencies]
assert_matches = "1.5.0"
mockall = "0.11.4"
tokio = { version = "*", features = ["test-util"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
voice-proto = { path = "../proto", features = ["server", "client"] }

[build-dependencies]
anyhow = "1.0.75"
tonic-build = "0.10.2"
