[package]
name = "voices-channels-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31" }
clap = { version = "4.4.6", features = ["derive", "env"] }
prost = "0.12.1"
prost-types = "0.12.1"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic = { version = "0.10.2", features = ["transport"] }
tower-http = { version = "0.4.4", features = ["trace", "tracing"] }
tracing = "0.1.39"
tracing-log = "0.1.3"
tower = { version = "0.4.13", features = ["tracing"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
voices-channels = { path = "../core" }
voices-channels-models = { path = "../models" }

[build-dependencies]
anyhow = "1.0.75"
tonic-build = "0.10.2"
