[package]
name = "voices-voice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive", "env"] }
futures-util = "0.3.28"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["net", "sync", "macros"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-util = { version = "0.7.9", features = ["io-util", "net"] }
tracing = { version = "0.1.39", features = ["log"] }
udp-proto = { version = "0.1.0", path = "../../udp-proto" }
uuid = { version = "1.4.1", features = ["v4"] }
voices-voice-crypto = { path = "../crypto" }
voices-voice-models = { path = "../models" }
voice-proto = { path = "../proto", features = ["server"] }
xsalsa20poly1305 = { version = "0.9.1", features = ["std"] }

[dev-dependencies]
assert_matches = "1.5.0"
mockall = "0.11.4"
tokio = { version = "*", features = ["test-util"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
voice-proto = { path = "../proto", features = ["server", "client"] }

[features]
default = []
# test-internals = ["mockall", "voice-proto/server", "voice-proto/client"]
