[package]
name = "voice-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
prost-types = "0.12.1"

[build-dependencies]
anyhow = "1.0.75"
prost-build = "0.12.1"

[features]
default = []
server = []
client = []
